refactor: DB structure (WIP); add: new profile dialog (WIP);